tests/asm-link/character-escapes/rgbasm.err
error: invalid character escape
    ╭─[ test.asm:6:8 ]
    │
  6 │ escape \z?"
    │        ─┬  
    │         ╰── cannot escape this character
    │ 
 10 │   m "(\n \r \t)"
    │   ┬  
    │   ╰── macro called here
────╯
error: invalid character in bracketed macro argument
    ╭─[ test.asm:7:30 ]
    │
  7 │   println "invalid character \<\n>?"
    │                              ─┬  
    │                               ╰── this bracketed macro argument is invalid
    │ 
 10 │   m "(\n \r \t)"
    │   ┬  
    │   ╰── macro called here
────╯
error: invalid character in bracketed macro argument
    ╭─[ test.asm:8:32 ]
    │
  8 │   println """invalid character \<   >?"""
    │                                ─┬    
    │                                 ╰──── this bracketed macro argument is invalid
    │ 
 10 │   m "(\n \r \t)"
    │   ┬  
    │   ╰── macro called here
────╯
3 errors generated.
